更新部分算法和代码